Pass options as ImmutableMap
This is a preparatory step for the implementation of concurrent
formatting to rule out mutation of the options.